# cv-data-test

./: .gitignore  CMakeLists.txt  README.md
demo-support/: CMakeLists.txt
demo-support/include/: demo-support.h
demo-support/src/: SimpleFaceDetector.cpp
scripts/: README.md  feret_filter.rb
src/: SimpleFaceDetector.cpp  SimpleFaceDetector.h  cmuFaces.cpp  feretDb.cpp  inriaHeadPose.cpp  nckuSet.cpp  openCvTest.cpp
